// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondSignatureRegistrationForm should render backup step 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div>
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          data-testid="SecondSignature__backup-step"
        >
          <div
            class="my-8"
          >
            <div
              class="flex items-end justify-between bg-theme-background"
            >
              <div>
                <h1
                  class="mb-0 md:text-4xl"
                  data-testid="header__title"
                >
                  Your Second Signature
                </h1>
              </div>
            </div>
          </div>
          <div
            class="space-y-8"
          >
            <div
              class="flex rounded-lg overflow-hidden bg-theme-warning"
            >
              <div
                class="sc-AxhCb emmdwf flex items-center justify-center text-theme-warning bg-theme-warning-200"
              >
                <div
                  class="sc-AxirZ bMjbpr"
                  height="30"
                  width="30"
                >
                  <svg>
                    alert-default.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxiKw ffnSzD flex-1 bg-theme-warning-100"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, optio ipsum, porro in dolore ex ab iste labore illo perferendis maiores. Ratione quo ipsa adipisci repellendus consectetur ipsam facere nostrum.
              </div>
            </div>
            <ul
              class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 row-gap-5 col-gap-3"
            >
              <li
                class="relative px-3 py-3 border rounded border-theme-neutral-light"
                data-testid="MnemonicList__item"
              >
                <span
                  class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
                >
                  1
                </span>
                <span
                  class="font-medium text-theme-neutral-800"
                >
                  test
                </span>
              </li>
              <li
                class="relative px-3 py-3 border rounded border-theme-neutral-light"
                data-testid="MnemonicList__item"
              >
                <span
                  class="absolute top-0 left-0 px-1 text-xs font-semibold transform translate-x-2 -translate-y-2 bg-theme-background text-theme-neutral"
                >
                  2
                </span>
                <span
                  class="font-medium text-theme-neutral-800"
                >
                  mnemonic
                </span>
              </li>
            </ul>
            <div
              class="flex justify-end w-full"
            >
              <div
                class="inline-block cursor-pointer"
                data-testid="clipboard__wrapper"
              >
                <button
                  class="sc-AxhUy dIHDOr"
                  color="primary"
                  data-testid="SecondSignature__copy"
                  type="button"
                >
                  <div
                    class="sc-AxirZ iQaTP"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      copy.svg
                    </svg>
                  </div>
                  <span>
                    Copy
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl fHSugy border-theme-neutral-300"
            type="horizontal"
          />
          <div
            class="py-3"
          >
            <div
              class="flex justify-between"
            >
              <div>
                <h3
                  class="mb-1 text-theme-neutral-dark"
                >
                  Your password in the file
                </h3>
                <p
                  class="text-theme-neutral"
                >
                  You can also download and store safely your passphrase.
                </p>
              </div>
              <div
                class="sc-AxirZ RbXVX"
                height="40"
                width="40"
              >
                <svg>
                  file-password.svg
                </svg>
              </div>
            </div>
            <div
              class="flex justify-end w-full"
            >
              <button
                class="sc-AxhUy dIHDOr flex items-center mt-4 space-x-2"
                color="primary"
                data-testid="SecondSignature__download"
                type="button"
              >
                <div
                  class="sc-AxirZ iQaTP"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    download.svg
                  </svg>
                </div>
                <span>
                  Download
                </span>
              </button>
            </div>
          </div>
          <div
            class="sc-AxgMl fHSugy border-theme-neutral-300"
            type="horizontal"
          />
        </section>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SecondSignatureRegistrationForm should render confirmation step 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="Form"
  >
    <div>
      <div
        data-testid="tab-pabel__active-panel"
      >
        <section
          data-testid="SecondSignature__confirmation-step"
        >
          <div
            class="my-8"
          >
            <div
              class="flex items-end justify-between bg-theme-background"
            >
              <div>
                <h1
                  class="mb-0 md:text-4xl"
                  data-testid="header__title"
                >
                  Confirm your passphrase
                </h1>
                <div
                  class="text-theme-neutral-dark"
                  data-testid="header__subtitle"
                >
                  Confirm your password to continue
                </div>
              </div>
            </div>
          </div>
          <div>
            <ul
              class="flex space-x-2"
            >
              <button
                class="sc-AxmLO sc-fzozJi hUvGlA"
                data-testid="MnemonicVerificationProgress__Tab"
                disabled=""
              >
                <span>
                  The #5 word
                </span>
              </button>
              <button
                class="sc-AxmLO sc-fzozJi eIqJVJ"
                data-testid="MnemonicVerificationProgress__Tab"
                disabled=""
              >
                <span>
                  The #10 word
                </span>
              </button>
              <button
                class="sc-AxmLO sc-fzozJi eIqJVJ"
                data-testid="MnemonicVerificationProgress__Tab"
                disabled=""
              >
                <span>
                  The #4 word
                </span>
              </button>
            </ul>
            <div
              class="mt-10"
            >
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <p
                    class="mb-2 font-semibold text-theme-neutral-dark"
                    data-testid="MnemonicVerificationOptions__title"
                  >
                    Select word #5
                  </p>
                  <div
                    class="grid grid-cols-3 gap-2"
                  >
                    <button
                      class="sc-AxmLO cNAsSK"
                      data-testid="MnemonicVerificationOptions__button"
                      type="button"
                    >
                      mnemonic
                    </button>
                    <button
                      class="sc-AxmLO cNAsSK"
                      data-testid="MnemonicVerificationOptions__button"
                      type="button"
                    >
                      test
                    </button>
                    <button
                      class="sc-AxmLO cNAsSK"
                      data-testid="MnemonicVerificationOptions__button"
                      type="button"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxgMl fHSugy border-theme-neutral-300"
            type="horizontal"
          />
        </section>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
